Fix z-index in nav menu

--- a/_sass/components/nav-menu.sass
+++ b/_sass/components/nav-menu.sass
@@ -20,3 +20,4 @@
         width: 100%
         padding: 0.3em
         text-align: center
+        z-index: 10
